# IFGContrastEnhancer

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-release.yml
src/: __init__.py  clahe.py  demo.py  ifg.py  metrics.py  utils.py
src/enhancements/: __init__.py  clahe.py  ifg.py
src/gui/: imageView.py  window.py  worker.py
src/utils/: __init__.py  resource.py
