[project]
name = "ifg-based-contrast-enhancement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pyside6>=6.10.0",
]
[project.scripts]
ifg-enhance-gui = "main:main"
