[project]
name = "ifg-based-contrast-enhancement"
version = "1.0.6"
description = "Low-contrast color image enhancement using an IFG + CLAHE pipeline with a Qt GUI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.3",
    "opencv-python>=4.11",
    "pyside6>=6.10",
]

[project.scripts]
ifg-enhance-gui = "main:main"
